# brain-tumor

./: .env.example  .gitignore  API.md  README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt  security.py  train_model.py
backend/: config.py  database.py  exceptions.py  log.py  main.py  model_loader.py  requirements.txt  schemas.py  security.py
backend/routers/: __init__.py  auth.py  patients.py  predict.py
frontend/: dashboard.html  index.html  login.html  predict.html
frontend/css/: custom.css
frontend/js/: api.js  auth.js  config.js  upload.js  utils.js
models/: __init__.py  class_mapping.json  db_models.py  ml_model.py
routers/: auth.py  patients.py  predict.py  scans.py
static/css/: app.css
static/js/: app.js  dashboard.js  patients.js  predict.js
templates/: 404.html  base.html  dashboard.html  login.html  patient_detail.html  patients.html  predict.html  register.html  scan_detail.html
tests/: conftest.py  test_auth.py  test_e2e.py  test_image_logic.py  test_patients.py  test_predict.py  test_utils.py
